Giftcard continue, fix background on mobile

--- a/invite/invite.css
+++ b/invite/invite.css
@@ -1,8 +1,12 @@
-body{
+html{
+    height: 100%;
     background-color: #151a33;
     background: url('background-min.jpg') no-repeat center center fixed;
     background-size: cover;
 
+    overflow: hidden;
+}
+body{
     display: flex;
     align-items: center;
     justify-content: center;
